Use AssetLibrary to get structure