@@ -3,12 +3,15 @@ package jrh.game.asset;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import jrh.game.card.Card;
 import jrh.game.card.CardId;
+import jrh.game.structure.Structure;
+import jrh.game.structure.StructureId;
 import jrh.game.util.ObjectMapperFactory;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
 import java.io.File;
 import java.io.IOException;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -19,7 +22,6 @@ public class FileSystemAssetLibrary implements AssetLibrary {
     private static final Logger logger = LogManager.getLogger(FileSystemAssetLibrary.class);
 
     private final Map<CardId, Card> cards = new HashMap<>();
-    private final Map<CardId, Card> debugCards = new HashMap<>();
 
     public FileSystemAssetLibrary(File cardDirectory) {
         loadCards(cardDirectory);
@@ -31,13 +33,18 @@ public class FileSystemAssetLibrary implements AssetLibrary {
     }
 
     @Override
-    public Card getDebugCard(CardId cardId) {
-        return debugCards.get(cardId);
+    public List<Card> getAllCards() {
+        return List.copyOf(cards.values());
     }
 
     @Override
-    public List<Card> getAllCards() {
-        return List.copyOf(cards.values());
+    public Structure getStructure(StructureId structureId) {
+        return new Structure(structureId);
+    }
+
+    @Override
+    public List<Structure> getAllStructures() {
+        return Collections.emptyList();
     }
 
     private void loadCards(File library) {
@@ -55,11 +62,7 @@ public class FileSystemAssetLibrary implements AssetLibrary {
             } else {
                 try {
                     Card card = objectMapper.readValue(file, Card.class);
-                    if (card.getCardId().isDebugId()) {
-                        debugCards.put(card.getCardId(), card);
-                    } else {
-                        cards.put(card.getCardId(), card);
-                    }
+                    cards.put(card.getCardId(), card);
                 } catch (IOException e) {
                     logger.error("Error reading card from file={}", file, e);
                 }
